frontend/TAMMParser.cc

// Generated from TAMM.g4 by ANTLR 4.6


#include "TAMMVisitor.h"

#include "TAMMParser.h"


using namespace antlrcpp;
using namespace antlr4;

TAMMParser::TAMMParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

TAMMParser::~TAMMParser() {
  delete _interpreter;
}

std::string TAMMParser::getGrammarFileName() const {
  return "TAMM.g4";
}

const std::vector<std::string>& TAMMParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& TAMMParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- Translation_unitContext ------------------------------------------------------------------

TAMMParser::Translation_unitContext::Translation_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TAMMParser::Compound_element_listContext* TAMMParser::Translation_unitContext::compound_element_list() {
  return getRuleContext<TAMMParser::Compound_element_listContext>(0);
}

tree::TerminalNode* TAMMParser::Translation_unitContext::EOF() {
  return getToken(TAMMParser::EOF, 0);
}


size_t TAMMParser::Translation_unitContext::getRuleIndex() const {
  return TAMMParser::RuleTranslation_unit;
}

antlrcpp::Any TAMMParser::Translation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitTranslation_unit(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Translation_unitContext* TAMMParser::translation_unit() {
  Translation_unitContext *_localctx = _tracker.createInstance<Translation_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, TAMMParser::RuleTranslation_unit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    compound_element_list();
    setState(53);
    match(TAMMParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_element_listContext ------------------------------------------------------------------

TAMMParser::Compound_element_listContext::Compound_element_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TAMMParser::Compound_elementContext *> TAMMParser::Compound_element_listContext::compound_element() {
  return getRuleContexts<TAMMParser::Compound_elementContext>();
}

TAMMParser::Compound_elementContext* TAMMParser::Compound_element_listContext::compound_element(size_t i) {
  return getRuleContext<TAMMParser::Compound_elementContext>(i);
}


size_t TAMMParser::Compound_element_listContext::getRuleIndex() const {
  return TAMMParser::RuleCompound_element_list;
}

antlrcpp::Any TAMMParser::Compound_element_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitCompound_element_list(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Compound_element_listContext* TAMMParser::compound_element_list() {
  Compound_element_listContext *_localctx = _tracker.createInstance<Compound_element_listContext>(_ctx, getState());
  enterRule(_localctx, 2, TAMMParser::RuleCompound_element_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TAMMParser::ID) {
      setState(55);
      compound_element();
      setState(60);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_elementContext ------------------------------------------------------------------

TAMMParser::Compound_elementContext::Compound_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TAMMParser::IdentifierContext* TAMMParser::Compound_elementContext::identifier() {
  return getRuleContext<TAMMParser::IdentifierContext>(0);
}

tree::TerminalNode* TAMMParser::Compound_elementContext::LBRACE() {
  return getToken(TAMMParser::LBRACE, 0);
}

TAMMParser::Element_listContext* TAMMParser::Compound_elementContext::element_list() {
  return getRuleContext<TAMMParser::Element_listContext>(0);
}

tree::TerminalNode* TAMMParser::Compound_elementContext::RBRACE() {
  return getToken(TAMMParser::RBRACE, 0);
}


size_t TAMMParser::Compound_elementContext::getRuleIndex() const {
  return TAMMParser::RuleCompound_element;
}

antlrcpp::Any TAMMParser::Compound_elementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitCompound_element(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Compound_elementContext* TAMMParser::compound_element() {
  Compound_elementContext *_localctx = _tracker.createInstance<Compound_elementContext>(_ctx, getState());
  enterRule(_localctx, 4, TAMMParser::RuleCompound_element);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    identifier();
    setState(62);
    match(TAMMParser::LBRACE);
    setState(63);
    element_list();
    setState(64);
    match(TAMMParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Element_listContext ------------------------------------------------------------------

TAMMParser::Element_listContext::Element_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TAMMParser::ElementContext *> TAMMParser::Element_listContext::element() {
  return getRuleContexts<TAMMParser::ElementContext>();
}

TAMMParser::ElementContext* TAMMParser::Element_listContext::element(size_t i) {
  return getRuleContext<TAMMParser::ElementContext>(i);
}


size_t TAMMParser::Element_listContext::getRuleIndex() const {
  return TAMMParser::RuleElement_list;
}

antlrcpp::Any TAMMParser::Element_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitElement_list(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Element_listContext* TAMMParser::element_list() {
  Element_listContext *_localctx = _tracker.createInstance<Element_listContext>(_ctx, getState());
  enterRule(_localctx, 6, TAMMParser::RuleElement_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TAMMParser::RANGE)
      | (1ULL << TAMMParser::INDEX)
      | (1ULL << TAMMParser::ARRAY)
      | (1ULL << TAMMParser::SCALAR)
      | (1ULL << TAMMParser::ID))) != 0)) {
      setState(66);
      element();
      setState(71);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContext ------------------------------------------------------------------

TAMMParser::ElementContext::ElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TAMMParser::DeclarationContext* TAMMParser::ElementContext::declaration() {
  return getRuleContext<TAMMParser::DeclarationContext>(0);
}

TAMMParser::StatementContext* TAMMParser::ElementContext::statement() {
  return getRuleContext<TAMMParser::StatementContext>(0);
}


size_t TAMMParser::ElementContext::getRuleIndex() const {
  return TAMMParser::RuleElement;
}

antlrcpp::Any TAMMParser::ElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitElement(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::ElementContext* TAMMParser::element() {
  ElementContext *_localctx = _tracker.createInstance<ElementContext>(_ctx, getState());
  enterRule(_localctx, 8, TAMMParser::RuleElement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TAMMParser::RANGE:
      case TAMMParser::INDEX:
      case TAMMParser::ARRAY:
      case TAMMParser::SCALAR: {
        enterOuterAlt(_localctx, 1);
        setState(72);
        declaration();
        break;
      }

      case TAMMParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(73);
        statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

TAMMParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TAMMParser::Range_declarationContext* TAMMParser::DeclarationContext::range_declaration() {
  return getRuleContext<TAMMParser::Range_declarationContext>(0);
}

TAMMParser::Index_declarationContext* TAMMParser::DeclarationContext::index_declaration() {
  return getRuleContext<TAMMParser::Index_declarationContext>(0);
}

TAMMParser::Scalar_declarationContext* TAMMParser::DeclarationContext::scalar_declaration() {
  return getRuleContext<TAMMParser::Scalar_declarationContext>(0);
}

TAMMParser::Array_declarationContext* TAMMParser::DeclarationContext::array_declaration() {
  return getRuleContext<TAMMParser::Array_declarationContext>(0);
}


size_t TAMMParser::DeclarationContext::getRuleIndex() const {
  return TAMMParser::RuleDeclaration;
}

antlrcpp::Any TAMMParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::DeclarationContext* TAMMParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, TAMMParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TAMMParser::RANGE: {
        enterOuterAlt(_localctx, 1);
        setState(76);
        range_declaration();
        break;
      }

      case TAMMParser::INDEX: {
        enterOuterAlt(_localctx, 2);
        setState(77);
        index_declaration();
        break;
      }

      case TAMMParser::SCALAR: {
        enterOuterAlt(_localctx, 3);
        setState(78);
        scalar_declaration();
        break;
      }

      case TAMMParser::ARRAY: {
        enterOuterAlt(_localctx, 4);
        setState(79);
        array_declaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Scalar_declarationContext ------------------------------------------------------------------

TAMMParser::Scalar_declarationContext::Scalar_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TAMMParser::Scalar_declarationContext::SCALAR() {
  return getToken(TAMMParser::SCALAR, 0);
}

std::vector<TAMMParser::IdentifierContext *> TAMMParser::Scalar_declarationContext::identifier() {
  return getRuleContexts<TAMMParser::IdentifierContext>();
}

TAMMParser::IdentifierContext* TAMMParser::Scalar_declarationContext::identifier(size_t i) {
  return getRuleContext<TAMMParser::IdentifierContext>(i);
}

tree::TerminalNode* TAMMParser::Scalar_declarationContext::SEMI() {
  return getToken(TAMMParser::SEMI, 0);
}

std::vector<tree::TerminalNode *> TAMMParser::Scalar_declarationContext::COMMA() {
  return getTokens(TAMMParser::COMMA);
}

tree::TerminalNode* TAMMParser::Scalar_declarationContext::COMMA(size_t i) {
  return getToken(TAMMParser::COMMA, i);
}


size_t TAMMParser::Scalar_declarationContext::getRuleIndex() const {
  return TAMMParser::RuleScalar_declaration;
}

antlrcpp::Any TAMMParser::Scalar_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitScalar_declaration(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Scalar_declarationContext* TAMMParser::scalar_declaration() {
  Scalar_declarationContext *_localctx = _tracker.createInstance<Scalar_declarationContext>(_ctx, getState());
  enterRule(_localctx, 12, TAMMParser::RuleScalar_declaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(TAMMParser::SCALAR);
    setState(83);
    identifier();
    setState(88);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TAMMParser::COMMA) {
      setState(84);
      match(TAMMParser::COMMA);
      setState(85);
      identifier();
      setState(90);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(91);
    match(TAMMParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Id_list_optContext ------------------------------------------------------------------

TAMMParser::Id_list_optContext::Id_list_optContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

TAMMParser::Id_listContext* TAMMParser::Id_list_optContext::id_list() {
  return getRuleContext<TAMMParser::Id_listContext>(0);
}


size_t TAMMParser::Id_list_optContext::getRuleIndex() const {
  return TAMMParser::RuleId_list_opt;
}

antlrcpp::Any TAMMParser::Id_list_optContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitId_list_opt(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Id_list_optContext* TAMMParser::id_list_opt() {
  Id_list_optContext *_localctx = _tracker.createInstance<Id_list_optContext>(_ctx, getState());
  enterRule(_localctx, 14, TAMMParser::RuleId_list_opt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case TAMMParser::RBRACKET: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case TAMMParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(94);
        id_list();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Id_listContext ------------------------------------------------------------------

TAMMParser::Id_listContext::Id_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TAMMParser::IdentifierContext *> TAMMParser::Id_listContext::identifier() {
  return getRuleContexts<TAMMParser::IdentifierContext>();
}

TAMMParser::IdentifierContext* TAMMParser::Id_listContext::identifier(size_t i) {
  return getRuleContext<TAMMParser::IdentifierContext>(i);
}

std::vector<tree::TerminalNode *> TAMMParser::Id_listContext::COMMA() {
  return getTokens(TAMMParser::COMMA);
}

tree::TerminalNode* TAMMParser::Id_listContext::COMMA(size_t i) {
  return getToken(TAMMParser::COMMA, i);
}


size_t TAMMParser::Id_listContext::getRuleIndex() const {
  return TAMMParser::RuleId_list;
}

antlrcpp::Any TAMMParser::Id_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitId_list(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Id_listContext* TAMMParser::id_list() {
  Id_listContext *_localctx = _tracker.createInstance<Id_listContext>(_ctx, getState());
  enterRule(_localctx, 16, TAMMParser::RuleId_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    identifier();
    setState(102);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TAMMParser::COMMA) {
      setState(98);
      match(TAMMParser::COMMA);
      setState(99);
      identifier();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Num_listContext ------------------------------------------------------------------

TAMMParser::Num_listContext::Num_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<TAMMParser::Numerical_constantContext *> TAMMParser::Num_listContext::numerical_constant() {
  return getRuleContexts<TAMMParser::Numerical_constantContext>();
}

TAMMParser::Numerical_constantContext* TAMMParser::Num_listContext::numerical_constant(size_t i) {
  return getRuleContext<TAMMParser::Numerical_constantContext>(i);
}

std::vector<tree::TerminalNode *> TAMMParser::Num_listContext::COMMA() {
  return getTokens(TAMMParser::COMMA);
}

tree::TerminalNode* TAMMParser::Num_listContext::COMMA(size_t i) {
  return getToken(TAMMParser::COMMA, i);
}


size_t TAMMParser::Num_listContext::getRuleIndex() const {
  return TAMMParser::RuleNum_list;
}

antlrcpp::Any TAMMParser::Num_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitNum_list(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Num_listContext* TAMMParser::num_list() {
  Num_listContext *_localctx = _tracker.createInstance<Num_listContext>(_ctx, getState());
  enterRule(_localctx, 18, TAMMParser::RuleNum_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    numerical_constant();
    setState(110);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == TAMMParser::COMMA) {
      setState(106);
      match(TAMMParser::COMMA);
      setState(107);
      numerical_constant();
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

TAMMParser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TAMMParser::IdentifierContext::ID() {
  return getToken(TAMMParser::ID, 0);
}


size_t TAMMParser::IdentifierContext::getRuleIndex() const {
  return TAMMParser::RuleIdentifier;
}

antlrcpp::Any TAMMParser::IdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitIdentifier(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::IdentifierContext* TAMMParser::identifier() {
  IdentifierContext *_localctx = _tracker.createInstance<IdentifierContext>(_ctx, getState());
  enterRule(_localctx, 20, TAMMParser::RuleIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(TAMMParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Integer_constantContext ------------------------------------------------------------------

TAMMParser::Integer_constantContext::Integer_constantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TAMMParser::Integer_constantContext::ICONST() {
  return getToken(TAMMParser::ICONST, 0);
}


size_t TAMMParser::Integer_constantContext::getRuleIndex() const {
  return TAMMParser::RuleInteger_constant;
}

antlrcpp::Any TAMMParser::Integer_constantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitInteger_constant(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Integer_constantContext* TAMMParser::integer_constant() {
  Integer_constantContext *_localctx = _tracker.createInstance<Integer_constantContext>(_ctx, getState());
  enterRule(_localctx, 22, TAMMParser::RuleInteger_constant);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    match(TAMMParser::ICONST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Numerical_constantContext ------------------------------------------------------------------

TAMMParser::Numerical_constantContext::Numerical_constantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TAMMParser::Numerical_constantContext::ICONST() {
  return getToken(TAMMParser::ICONST, 0);
}

tree::TerminalNode* TAMMParser::Numerical_constantContext::FCONST() {
  return getToken(TAMMParser::FCONST, 0);
}

tree::TerminalNode* TAMMParser::Numerical_constantContext::FRAC() {
  return getToken(TAMMParser::FRAC, 0);
}


size_t TAMMParser::Numerical_constantContext::getRuleIndex() const {
  return TAMMParser::RuleNumerical_constant;
}

antlrcpp::Any TAMMParser::Numerical_constantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitNumerical_constant(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Numerical_constantContext* TAMMParser::numerical_constant() {
  Numerical_constantContext *_localctx = _tracker.createInstance<Numerical_constantContext>(_ctx, getState());
  enterRule(_localctx, 24, TAMMParser::RuleNumerical_constant);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << TAMMParser::ICONST)
      | (1ULL << TAMMParser::FRAC)
      | (1ULL << TAMMParser::FCONST))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Range_declarationContext ------------------------------------------------------------------

TAMMParser::Range_declarationContext::Range_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TAMMParser::Range_declarationContext::RANGE() {
  return getToken(TAMMParser::RANGE, 0);
}

TAMMParser::Id_listContext* TAMMParser::Range_declarationContext::id_list() {
  return getRuleContext<TAMMParser::Id_listContext>(0);
}

tree::TerminalNode* TAMMParser::Range_declarationContext::EQUALS() {
  return getToken(TAMMParser::EQUALS, 0);
}

TAMMParser::Integer_constantContext* TAMMParser::Range_declarationContext::integer_constant() {
  return getRuleContext<TAMMParser::Integer_constantContext>(0);
}

tree::TerminalNode* TAMMParser::Range_declarationContext::SEMI() {
  return getToken(TAMMParser::SEMI, 0);
}


size_t TAMMParser::Range_declarationContext::getRuleIndex() const {
  return TAMMParser::RuleRange_declaration;
}

antlrcpp::Any TAMMParser::Range_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitRange_declaration(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Range_declarationContext* TAMMParser::range_declaration() {
  Range_declarationContext *_localctx = _tracker.createInstance<Range_declarationContext>(_ctx, getState());
  enterRule(_localctx, 26, TAMMParser::RuleRange_declaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(TAMMParser::RANGE);
    setState(120);
    id_list();
    setState(121);
    match(TAMMParser::EQUALS);
    setState(122);
    integer_constant();
    setState(123);
    match(TAMMParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Index_declarationContext ------------------------------------------------------------------

TAMMParser::Index_declarationContext::Index_declarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* TAMMParser::Index_declarationContext::INDEX() {
  return getToken(TAMMParser::INDEX, 0);
}

TAMMParser::Id_listContext* TAMMParser::Index_declarationContext::id_list() {
  return getRuleContext<TAMMParser::Id_listContext>(0);
}

tree::TerminalNode* TAMMParser::Index_declarationContext::EQUALS() {
  return getToken(TAMMParser::EQUALS, 0);
}

TAMMParser::IdentifierContext* TAMMParser::Index_declarationContext::identifier() {
  return getRuleContext<TAMMParser::IdentifierContext>(0);
}

tree::TerminalNode* TAMMParser::Index_declarationContext::SEMI() {
  return getToken(TAMMParser::SEMI, 0);
}


size_t TAMMParser::Index_declarationContext::getRuleIndex() const {
  return TAMMParser::RuleIndex_declaration;
}

antlrcpp::Any TAMMParser::Index_declarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<TAMMVisitor*>(visitor))
    return parserVisitor->visitIndex_declaration(this);
  else
    return visitor->visitChildren(this);
}

TAMMParser::Index_declarationContext* TAMMParser::index_declaration() {
  Index_declarationContext *_localctx = _tracker.createInstance<Index_declarationContext>(_ctx, getState());
  enterRule(_localctx, 28, TAMMParser::RuleIndex_declaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(TAMMParser::INDEX);
    setState(126);
    id_list();
    setState(127);
    match(TAMMParser::EQUALS);
    setState(128);
    identifier();
    setState(129);
    match(TAMMParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
